apply generic for book